# CodeBrothers.Start

./: README.md
backend/: README.md  StartInfra.py  codebrothers-services-ingress.yml
backend/csharp/codebrothers.services.customer/: Program.cs  Startup.cs  appsettings.json  codebrothers.services.customer.csproj
backend/elixir/codebrothers_customer/: .gitignore  README.md  mix.exs
backend/java/codebrothers.infrastructure.eureka/: Dockerfile  pom.xml
backend/java/codebrothers.services.auth/: Dockerfile  codebrothers-services-auth-deploy.yml  (+1 more)
backend/rust/codebrothers.services.user/: .env  Cargo.toml  Dockerfile  README.md
backend/rust/codebrothers.services.user/src/: main.rs  models.rs  repository.rs  schema.rs  user.rs
infrastructure/: README.md
infrastructure/Kubernetes/: CodeBrothers_Customer_DB.sql  README.md  clusterrolebinding.yml  codebrothers-configmap.yml  codebrothers-secrets.yml  codebrothers-services-auth-deploy.yml  codebrothers-services-customer-deploy.yml  codebrothers-services-ingress.yml  pgadmin-code-brother-deploy.yml  postgresql-code-brother-deploy.yml  postgresql-storage.yml  rabbitmq-code-brother-deploy.yml  rabbitmq-code-brother-storage.yml
infrastructure/database/: README.md
infrastructure/messagebroker/: README.md
infrastructure/microservices/: codebrothers.customer.start.sh  codebrothers.customer.up.sh
infrastructure/postgresql/: 00_deploy-postgresql.yml  01_service-postgresql.yml  02_deploy-pgadmin.yml  03_service-pgadmin.yml  docker-compose.yml  postgresql-configmap.yml  postgresql-secrets.yml  postgresql-storage.yml
(+171 files in other folders)
